# suffixient-array

./: CMakeLists.txt  LICENSE  README.md  extract_patterns.py  filter_dataset.py  locate_pipeline.py  plot_time_locate.py
CMakeModules/: ConfigureCompilerClang.cmake  ConfigureCompilerGcc.cmake
competitors/r-index/: CMakeLists.txt  ri-build.cpp  ri-locate.cpp
competitors/r-index/malloc_count/: CMakeLists.txt
data/: fasta_example.txt  paper_example.txt.patterns.reads  paper_example.txt.reads  paper_patterns.txt  paper_reads.fasta  paper_reads.fasta.mems  paper_reads.fasta.stats  test_long.fasta  test_long.fasta.reads  yeast_patterns.fasta
experiments/: extract_patterns.py  format_dataset.py
experiments/toehold/: CMakeLists.txt  ri-locate.cpp
experiments/toehold/internal/: r_index.hpp  rle_string.hpp
include/: CMakeLists.txt
include/Hk/: CMakeLists.txt  Hk_Ferragina_Venturini.hpp
include/LZ/: CMakeLists.txt
include/LZ/lz77index/: LZ77_Kreft_Navarro_index.hpp  LZ77_compressed_text-modified.hpp  LZ77_compressed_text.hpp  static_compressed_text.cpp  static_compressed_text.h  static_compressed_text_lz77.cpp  static_compressed_text_lz77.h
include/RLZ/: CMakeLists.txt  RLZ_DNA.hpp  RLZ_DNA_o2.hpp
include/bitvectors/: CMakeLists.txt  elias_fano_bitvector.hpp  succinct_bitvector.hpp
include/common/: CMakeLists.txt  common.hpp
include/common_/: CMakeLists.txt
include/ctriepp/: AlphabetAwareZFastTrie.hpp  CTriePP.hpp  CuckooHash.hpp  LICENSE.txt
include/pfp_iterator/: CMakeLists.txt  common.hpp  dictionary.hpp  parse.hpp  pfp.hpp  pfp_iterator.hpp  priority_queue.hpp
include/suffixient_array/: CMakeLists.txt  bitpacked_text_oracle.hpp  elias_fano_ds.hpp  prefix_array_binary_search.hpp  suffix_array_binary_search.hpp  suffixient_array_baseline.hpp  suffixient_array_elias_fano.hpp  suffixient_array_elias_fano_old.hpp  uncompressed_text_oracle.hpp
index/: CMakeLists.txt  build_DNA_index.cpp  build_store_index.cpp  build_test_index.cpp  locate.cpp  mems.cpp  suffixient_DNA_index.hpp  suffixient_index.hpp  suffixient_sA_index.hpp  suffixient_zfast_index.hpp
pfp-src/: CMakeLists.txt  README.md  pscan.hpp
pipeline/: mems_suffixient.py  suffixient-array-index.py  suffixient-set.py
sA-index-src/: CMakeLists.txt  build_store_sA_index.cpp  build_test_z_fast_index.cpp  locate.cpp  mems.cpp  suffixient_array_index.hpp  suffixient_zfast_index.hpp
sources/: CMakeLists.txt  one_pass_index.cpp  one_pass_lcs.cpp  supermaximal_substrings_distribution.cpp
suff-set-src/: CMakeLists.txt  fm.cpp  linear_time.cpp  one_pass.cpp  one_pass_build_index.cpp  pfp_suffixient.cpp  stats.cpp
